<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/textViewFilterHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter_header"
            android:textColor="@color/blue_pressed"
            android:textStyle="italic"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/editTextMinYear"
            android:layout_width="0dp"
            app:layout_constraintEnd_toStartOf="@id/editTextMaxYear"
            app:layout_constraintTop_toBottomOf="@id/textViewFilterHeader"
            android:imeOptions="actionNext"
            android:hint="@string/min_year"
            style="@style/FilterInputStyle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/editTextMaxYear"
            android:layout_width="0dp"
            android:hint="@string/max_year"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="@id/editTextMinYear"
            android:imeOptions="actionDone"
            style="@style/FilterInputStyle"
            app:layout_constraintStart_toEndOf="@id/editTextMinYear"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"/>

    <com.enesgemci.dubbizle.view.MButton
            android:id="@+id/buttonFilter"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/editTextMinYear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/filter"/>


</androidx.constraintlayout.widget.ConstraintLayout>